# isv_game

./: .gitignore
scratch_work/: README.md  isv_glyphs.csv  paper.txt
scratch_work/assets/: ecs  notes  word_notes
scratch_work/assets/data/: isv_animals.csv  isv_clothing.csv  isv_furniture.csv  isv_materials.csv  isv_plants.csv  isv_weapons.csv  latin_floors.csv  latin_furniture.csv  latin_trees.csv  latin_voxels.csv
scratch_work/core_isv/: Cargo.toml
scratch_work/core_isv/examples/: lol.rs
scratch_work/core_isv/src/: lib.rs
scratch_work/game/: Cargo.toml
scratch_work/game/src/: main.rs
scratch_work/isv2/: Cargo.toml
scratch_work/isv2/examples/: test.rs
scratch_work/isv2/src/: animate_nouns.rs  dictionary_initialization.rs  irregular_verbs.rs  lib.rs  new_interslavic_words_list - words_protoslavic.tsv
scratch_work/latin_common/: Cargo.toml
scratch_work/latin_common/examples/: lol.rs
scratch_work/latin_common/src/: animal_types.rs  bevy_resources.rs  complexplanet.rs  input_system.rs  lib.rs  typedefs.rs  ui_system.rs
scratch_work/latin_conjugator/: Cargo.toml  Readme.md  adjectives.csv  notes  nouns.csv  verbs.csv
scratch_work/latin_conjugator/examples/: test.rs
scratch_work/latin_conjugator/src/: lib.rs  main.rs
scratch_work/latin_macroquad/: Cargo.toml
scratch_work/latin_macroquad/src/: main.rs
scratch_work/slov_client/: Cargo.toml  index.html
scratch_work/slov_client/src/: main.rs
scratch_work/slov_common/: Cargo.toml
scratch_work/slov_common/examples/: lol.rs
scratch_work/slov_common/src/: actions.rs  animal_types.rs  bevy_resources.rs  complexplanet.rs  components.rs  const_collection.rs  csv_structs.rs  entity_structs.rs  gamemap.rs  input_system.rs  interslavic.rs  item_impls.rs  item_monads.rs  item_types.rs  lib.rs  server_stuff.rs  typedefs.rs  typeenums.rs  typeimpls.rs  ui_system.rs  voxel.rs  world.rs
scratch_work/tui_v/: Cargo.toml
scratch_work/tui_v/examples/: lol.rs
scratch_work/tui_v/src/: actions.rs  app.rs  blockable_trait.rs  color_trait.rs  complexplanet.rs  components.rs  equipment_traits.rs  gamemap.rs  graphic_trait.rs  input.rs  interslavic.rs  items_creatures.rs  lib.rs  material_trait.rs  tui.rs  typedefs.rs  typeenums.rs  typeimpls.rs  ui_system.rs  voxel.rs  weapon_impls.rs
