[package]
name = "botanical-latin"
version = "0.0.4"
edition = "2021"
description = "Conugator and Decliner for ancient and botanical Latin"
license = "MIT OR Apache-2.0"
#repository = "https://github.com/gold-silver-copper/interslavic-rs"

[dependencies]

csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
