
[package]
name = "slov_common"
version = "0.1.0"
edition = "2021"
description = "srl common"
license = "MIT OR Apache-2.0"

exclude = ["assets/*", ".github", "Makefile.toml", "*.log", "tags"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.27", default-features = false }
rstar = { git = "https://github.com/georust/rstar.git", branch = "master" }
strum = { version = "0.26", features = ["derive"] }
noise = "0.9"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }



bevy = "0.14"
bevy_egui = "0.28.0"
egui_ratatui = {version = "0.0.10"}
bracket-pathfinding = "0.8.7"
botanical-latin = "0.0.4"



[[example]]
name = "lol"
doc-scrape-examples = false
