[package]
name = "tui_v"
version = "0.1.0"
edition = "2021"


# ANCHOR: dependencies
[dependencies]
color-eyre = "0.6.3"
ratatui = "0.28.0"


rstar = { git = "https://github.com/georust/rstar.git", branch = "master" }
strum = { version = "0.26", features = ["derive"] }

rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
interslavic-rs = { path = "../isv2" }

bracket-pathfinding = "0.8.7"
#botanical-latin = "0.0.7"
